// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorLight component test set currentSceneTreeNode test change light type test change type to be point light, should show point light component 1`] = `
<article
  className="wonder-light"
>
  <div
    className=""
  >
    <article
      className="wonder-select"
    >
      <span
        className=""
      >
        type : 
      </span>
      <select
        onChange={[Function]}
        value="1"
      >
        <option
          value="0"
        >
          direction_light
        </option>
        <option
          value="1"
        >
          point_light
        </option>
      </select>
    </article>
  </div>
  <div
    className=""
  >
    <article
      className="wonder-point-light"
    >
      <article
        className="wonder-material-color"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            color : 
          </span>
          <span
            className=""
          >
            #ffffff
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
      <div
        className="light-intensity"
      >
        <article
          className="wonder-light-base"
        >
          <article
            className="wonder-float-input"
          >
            <span
              className="component-label"
            >
              Intensity : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="1"
            />
          </article>
        </article>
      </div>
      <div
        className="light-constant"
      >
        <article
          className="wonder-light-base"
        >
          <article
            className="wonder-float-input"
          >
            <span
              className="component-label"
            >
              Constant : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="1"
            />
          </article>
        </article>
      </div>
      <div
        className="light-linear"
      >
        <article
          className="wonder-light-base"
        >
          <article
            className="wonder-float-input"
          >
            <span
              className="component-label"
            >
              Linear : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="0.07"
            />
          </article>
        </article>
      </div>
      <div
        className="light-quadratic"
      >
        <article
          className="wonder-light-base"
        >
          <article
            className="wonder-float-input"
          >
            <span
              className="component-label"
            >
              Quadratic : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="0.017"
            />
          </article>
        </article>
      </div>
      <div
        className="light-range"
      >
        <article
          className="wonder-light-base"
        >
          <article
            className="wonder-float-input"
          >
            <span
              className="component-label"
            >
              Range : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="65"
            />
          </article>
        </article>
      </div>
    </article>
  </div>
</article>
`;

exports[`MainEditorLight component test set currentSceneTreeNode test change light type test the original type is direction light, should show direction light component  1`] = `
<article
  className="wonder-light"
>
  <div
    className=""
  >
    <article
      className="wonder-select"
    >
      <span
        className=""
      >
        type : 
      </span>
      <select
        onChange={[Function]}
        value="0"
      >
        <option
          value="0"
        >
          direction_light
        </option>
        <option
          value="1"
        >
          point_light
        </option>
      </select>
    </article>
  </div>
  <div
    className=""
  >
    <article
      className="wonder-direction-light"
    >
      <article
        className="wonder-material-color"
      >
        <div
          className=""
        >
          <span
            className=""
          >
            color : 
          </span>
          <span
            className=""
          >
            #ffffff
          </span>
          <button
            className=""
            onClick={[Function]}
          >
            pick color
          </button>
        </div>
      </article>
      <div
        className="light-intensity"
      >
        <article
          className="wonder-light-base"
        >
          <article
            className="wonder-float-input"
          >
            <span
              className="component-label"
            >
              Intensity : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="1"
            />
          </article>
        </article>
      </div>
    </article>
  </div>
</article>
`;
